--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-id 'com.android.application' version '8.2.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
+buildscript {
+    ext {
+        hilt_version = '2.48'
+    }
+
+    dependencies {
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.44'
+    }
 }
+
+plugins {
+    id 'com.android.application' version '8.2.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
+    id 'com.google.dagger.hilt.android' version "2.44" apply false
+}
+
+ext {
+    packageName = 'kr.co.are.searchimage'
+    minSdkVersion = 26
+    targetSdkVersion = 33
+    compileSdkVersion = 34
+}
+
+
