--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,26 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        hilt_version = '2.48'
+        hilt_version = '2.50'
+        kotlin_version = '1.9.20'
     }
 
     dependencies {
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.44'
+        classpath 'com.android.tools.build:gradle:8.2.0'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 plugins {
     id 'com.android.application' version '8.2.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
-    id 'com.google.dagger.hilt.android' version "2.44" apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
+    id 'com.google.dagger.hilt.android' version "$hilt_version" apply false
+    id 'com.google.gms.google-services' version '4.4.0' apply false
+    id 'com.google.firebase.crashlytics' version '2.9.9' apply false
+    id 'com.google.firebase.firebase-perf' version '1.4.2' apply false
 }
+
 
 ext {
     packageName = 'kr.co.are.searchimage'
