--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2'
     implementation 'androidx.compose.runtime:runtime-livedata:1.5.4'
 
+    implementation 'androidx.navigation:navigation-compose:2.7.6'
+
     /*Lottie*/
     implementation 'com.airbnb.android:lottie:4.2.0'
 
