--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,11 +49,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions{
+    kotlinOptions {
         jvmTarget = "1.8"
     }
-    tasks.withType(KaptGenerateStubs).configureEach{
-        kotlinOptions{
+    tasks.withType(KaptGenerateStubs).configureEach {
+        kotlinOptions {
             jvmTarget = "1.8"
         }
     }
@@ -94,6 +94,8 @@ dependencies {
     implementation 'androidx.compose.runtime:runtime-livedata:1.5.4'
 
     implementation 'androidx.navigation:navigation-compose:2.7.6'
+
+    implementation 'io.coil-kt:coil-compose:2.5.0' // 이미지 처리
 
     /*Lottie*/
     implementation 'com.airbnb.android:lottie:4.2.0'
