--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,7 +95,9 @@ dependencies {
 
     implementation 'androidx.navigation:navigation-compose:2.7.6'
 
-    implementation 'io.coil-kt:coil-compose:2.5.0' // 이미지 처리
+    implementation 'io.coil-kt:coil-compose:2.5.0' //
+    implementation "androidx.paging:paging-compose:3.2.1"
+
 
     /*Lottie*/
     implementation 'com.airbnb.android:lottie:4.2.0'
