--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,8 +95,11 @@ dependencies {
 
     implementation 'androidx.navigation:navigation-compose:2.7.6'
 
-    implementation 'io.coil-kt:coil-compose:2.5.0' //
+    implementation 'io.coil-kt:coil-compose:2.5.0'
     implementation "androidx.paging:paging-compose:3.2.1"
+
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+
 
 
     /*Lottie*/
