--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,10 @@ dependencies {
     /*Logger*/
     implementation 'com.orhanobut:logger:2.2.0'
 
+    /*Room*/
+    implementation "androidx.room:room-runtime:2.6.1"
+    kapt "androidx.room:room-compiler:2.6.1"
+
     // Network & Serialization
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
