--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,11 +64,6 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion '1.5.4'
     }
-    packaging {
-        resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
-        }
-    }
 }
 
 dependencies {
@@ -106,7 +101,7 @@ dependencies {
     implementation 'com.airbnb.android:lottie:4.2.0'
 
     /*Logger*/
-    implementation 'com.orhanobut:logger:2.2.0'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 
     /*Room*/
     implementation "androidx.room:room-runtime:2.6.1"
