--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,10 @@ android {
         applicationId rootProject.packageName
         minSdk rootProject.minSdkVersion
         targetSdk rootProject.targetSdkVersion
-        versionCode 2
+        versionCode 1
         versionName "1.0.0"
 
-        buildConfigField "String", "UNSPLASH_API_URL", localProperties.getProperty("api.unsplash.url")
+        buildConfigField "String", "UNSPLASH_API_URL", "https://api.unsplash.com/"
         buildConfigField "String", "UNSPLASH_ACCESS_KEY", localProperties.getProperty("api.unsplash.key")
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
