--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ android {
         versionCode 1
         versionName "1.0.0"
 
-        buildConfigField "String", "UNSPLASH_API_URL", "https://api.unsplash.com/"
+        buildConfigField "String", "UNSPLASH_API_URL", "\"https://api.unsplash.com/\""
         buildConfigField "String", "UNSPLASH_ACCESS_KEY", localProperties.getProperty("api.unsplash.key")
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
